fix(radio): aligns label

--- a/switches/radio/radio-option.mod.css
+++ b/switches/radio/radio-option.mod.css
@@ -10,6 +10,11 @@
 
 /* Radio input */
 
+.radioWrapper {
+  display: flex;
+  align-items: center;
+}
+
 .radioWrapper svg [id='borderAndContent'] > [id='border'] {
   stroke: 1px var(--token-border-color-input-pristine) solid;
 }
